# NURBS

./: CMakeLists.txt
source/cpp/: b_spline.cpp  knot_vector.cpp  main.cpp  vector.cpp  vertex.cpp  vertex_list.cpp
source/hpp/: b_spline.hpp  b_spline_struct.hpp  base.h  knot_vector.hpp  knot_vector_struct.hpp  vector.hpp  vertex.hpp  vertex_list.hpp  vertex_list_struct.hpp
